--- a/_data/tutorials.yml
+++ b/_data/tutorials.yml
@@ -1,2 +1,8 @@
-- title: Use IBM Cloud Hyper Protect Crypto Services to Encrypt VMware Disks
+- title: "Use IBM Cloud Hyper Protect Crypto Services to Encrypt VMware Disks"
   url: https://developer.ibm.com/tutorials/use-hyper-protect-crypto-services-to-encrypt-vmware-disks/
+- title: "Getting Stared with Hyper Protect DBaaS for MongoDB"
+  url: https://cloud.ibm.com/docs/services/hyper-protect-dbaas-for-mongodb?topic=hyper-protect-dbaas-for-mongodb-gettingstarted
+- title: "Getting Started with Hyper Protect DBaaS for PostgreSQL"
+  url: https://cloud.ibm.com/docs/services/hyper-protect-dbaas-for-postgresql?topic=hyper-protect-dbaas-for-postgresql-gettingstarted
+- title: "Deploy software to a private IBM Cloud Hyper Protect Virtual Server using IBM toolchain"
+  url: https://developer.ibm.com/tutorials/deploy-software-to-private-hyper-protect-virtual-servers-using-ibm-toolchain/
