--- a/_data/code-patterns.yml
+++ b/_data/code-patterns.yml
@@ -1,2 +1,2 @@
-- title: Disaster Donations
+- title: "Disaster Donations"
   url: https://developer.ibm.com/technologies/systems/patterns/systems-create-a-secure-disaster-donations-website
