Correct URLs for blogs

--- a/_data/blogs.yml
+++ b/_data/blogs.yml
@@ -14,10 +14,7 @@
   url: https://www.ibm.com/blogs/systems/integrating-hybrid-cloud-and-enterprise-it-infrastructure/
 
 - title: "IBM Cloud Hyper Protect Services: Protect your organization from internal AND external threats"
-  url: https://ibmcode-staging.us-east.containers.mybluemix.net/blogs/hyper-protect-services-protect-your-org-from-internal-and-external-threats/
-
-- title: "Advanced Client Driven Engagement at Daimler: Daimler's Journey to IBM Cloud and Why Hyper-protecting Their Data is So Important!"
-  url: https://blueprint-secured.sl.bluecloud.ibm.com/b_dir/blueprint.nsf/url/AB973818?OpenDocument
+  url: https://developer.ibm.com/blogs/hyper-protect-services-protect-your-org-from-internal-and-external-threats/
 
 - title: "IBM Cloud Brings the Most Open and Secure Public Cloud for Business"
   url: http://IBM Cloud Brings the Most Open and Secure Public Cloud for Business
