Add ltree and DBaaS KYOK blog posts

--- a/_data/blogs.yml
+++ b/_data/blogs.yml
@@ -1,3 +1,9 @@
+- title: "Announcing BYOK/KYOK for IBM Cloud Hyper Protect DBaaS"
+  url: https://www.ibm.com/cloud/blog/announcements/ibm-cloud-hyper-protect-dbaas
+  
+- title: "ltree is Now Available in IBM Cloud Hyper Protect DBaaS"
+  url: https://www.ibm.com/cloud/blog/announcements/itree-is-now-available-in-ibm-cloud-hyper-protect-dbaas
+
 - title: "The Best of IBM Z and LinuxONE in the public and private cloud"
   url: https://www.ibm.com/blogs/systems/the-best-of-ibm-z-and-linuxone-in-the-public-and-private-cloud/
 
