--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -23,7 +23,11 @@
   offering: hpvs
 
 - title: "Get Started with IBM Cloud Hyper Protect DBaaS"
-  url: https://www.youtube.com/watch?v=WfTWzjYTgCs
+  url: https://youtu.be/YzQdszTI4Zg
+  offering: dbaas
+
+- title: "IBM Cloud Hyper Protect DBaaS and Bring Your Own Key"
+  url: https://youtu.be/DwD_PFXjROM
   offering: dbaas
 
 - title: "Data security and privacy using IBM Cloud Hyper Protect DBaaS"
