--- a/_data/tutorials.yml
+++ b/_data/tutorials.yml
@@ -7,6 +7,9 @@
 - title: "Getting Started with Hyper Protect DBaaS for PostgreSQL"
   url: https://cloud.ibm.com/docs/services/hyper-protect-dbaas-for-postgresql?topic=hyper-protect-dbaas-for-postgresql-gettingstarted
 
+- title: "Protect cloud-based data with an encrypted database"
+- url: https://developer.ibm.com/tutorials/hyper-protect-your-data
+
 - title: "Deploy software to a private IBM Cloud Hyper Protect Virtual Server using IBM toolchain"
   url: https://developer.ibm.com/tutorials/deploy-software-to-private-hyper-protect-virtual-servers-using-ibm-toolchain/
 
