add think videos

--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -37,3 +37,12 @@
 - title: "Secure cloud-based data with IBM Cloud Hyper Protect DBaaS"
   url: https://www.youtube.com/watch?v=RLwlflTDDys
   offering: dbaas
+
+- title: "IBM THINK 2019: Introduction to Z as a Service"
+  url: https://www.ibm.com/events/think/watch/replay/120157283
+  
+- title: "IBM THINK 2019: IBM Cloud Hyper Protect family and Secure Service Container"
+  url: https://www.ibm.com/events/think/watch/replay/120171746
+  
+- title: "IBM THINK 2019: IBM Cloud security"
+  url: https://www.ibm.com/events/think/watch/replay/120118486
