--- a/_data/tutorials.yml
+++ b/_data/tutorials.yml
@@ -15,3 +15,6 @@
 
 - title: "Create an Nginx reverse proxy across multiple backend servers"
   url: https://developer.ibm.com/components/ibmz/tutorials/develop-a-website-with-different-frontend-and-api-backend-endpoints
+
+- title: "IBM Redbook: Securing Your Critical Workloads with IBM Hyper Protect Services"
+  url: http://www.redbooks.ibm.com/abstracts/sg248469.html?Open
