--- a/_data/podcasts.yml
+++ b/_data/podcasts.yml
@@ -1,5 +1,7 @@
 - title: "Securing what matters with Hyper Protect"
   url: https://anchor.fm/ibm-cloud-podcast/episodes/Securing-what-matters-with-Hyper-Protect-e6e02i
+  offering: ['hyper-protect', 'hpcs', 'hpvs', 'dbaas']
 
 - title: "Melissa Sassi - Z Evangelist"
   url: http://terminaltalk.net/PodcastGenerator/?name=melissa_sassi_-_z_evangelist.mp3
+  offering: ['hyper-protect', 'accelerator']
