--- a/_data/tech-talks.yml
+++ b/_data/tech-talks.yml
@@ -1,2 +1,3 @@
 - title: "Ensuring Your Customers’ Data Privacy With Applications Secured on IBM Z"
   url: https://developer.ibm.com/videos/ensuring-your-customers-data-privacy-with-applications-secured-on-ibm-z/
+  offering: hyper-protect
