--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,8 @@ language: ruby
 rvm:
   - 2.4.1
 
-deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
-  keep_history: true
-  on:
-    branch: master
+before_script:
+  - chmod +x ./script/cibuild
+
+script: ./script/cibuild
+
