--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,11 @@ before_script:
 
 script: ./script/cibuild
 
+env:
+  global:
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+
+cache: bundler
+
+notifications:
+  email: false
