--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: ruby
 rvm:
   - 2.4.1
 
+deploy:
+  github_token: $GITHUB_TOKEN
+  on:
+    branch: master
+
 before_script:
   - chmod +x ./script/cibuild
 
